compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Offers.Manager/content/Views/Offers/_LeadInformation.cshtml.pp
<table class="table table-bordered">
    <tr>
        <th style="width: 200px">
            First Name
        </th>
        <td>
            Rod
        </td>
    </tr>
    <tr>
        <th>
            Last Name
        </th>
        <td>
            Johnson
        </td>
    </tr>
    <tr>
        <th>
            Address
        </th>
        <td>
            72 Summer Pl.
        </td>
    </tr>
    <tr>
        <th>
            City
        </th>
        <td>
            Saratoga Springs
        </td>
    </tr>
    <tr>
        <th>
            State
        </th>
        <td>
            UT
        </td>
    </tr>
</table>
